fixed spacing on create new

--- a/css/main.css
+++ b/css/main.css
@@ -157,7 +157,6 @@ input[type=submit] {
   border: none;
   border-radius: 4px;
   cursor: pointer;
-  width: 20%;
   vertical-align: center;
 }
 
